# CrOS_EC_Python

./: 60-cros_ec_python.rules  LICENCE  README.md  example.py  fw_example.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml
cros_ec_python/: __init__.py  baseclass.py  cros_ec.py  dev.py  exceptions.py  lpc.py
cros_ec_python/commands/: __init__.py  features.py  framework_laptop.py  general.py  leds.py  memmap.py  pwm.py  thermal.py
cros_ec_python/constants/: COMMON.py  LPC.py  MEMMAP.py  __init__.py
cros_ec_python/devices/: __init__.py  dev.py  lpc.py  pawnio.py  win_fw_ec.py
cros_ec_python/ioports/: __init__.py  baseportio.py  devportio.py  freebsdportio.py  winportio.py  x86portio.py
cros_ec_python/utils/: __init__.py  devportio.py
examples/: basic_example.py  example.py  fw_example.py  hello.py  low_level_example.py  low_level_fw_example.py
pdoc/: custom.css
src/cros_ec_python/: __init__.py  cros_ec.py
tests/: devices.py  features.py  framework_laptop.py  general.py  leds.py  memmap.py  pwm.py  tests.py  thermal.py
