[project]
name = "cros_ec_python"
version = "0.0.2"
authors = [
  { name="Steve-Tech" }
]
description = "A Python library for interacting with a Chrome OS EC."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
docs = ["pdoc"]
lpc = ["portio"]

[project.urls]
Documentation = "https://steve-tech.github.io/CrOS_EC_Python/"
Repository = "https://github.com/Steve-Tech/CrOS_EC_Python"
Issues = "https://github.com/Steve-Tech/CrOS_EC_Python/issues"