[project]
name = "cros_ec_python"
version = "0.0.4"
authors = [
  { name="Steve-Tech" }
]
description = "A Python library for interacting with a Chrome OS EC."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Hardware",
]
license = "GPL-2.0-or-later"

[project.optional-dependencies]
docs = ["pdoc", "portio"]
lpc = ["portio"]

[project.urls]
Documentation = "https://steve-tech.github.io/CrOS_EC_Python/"
Repository = "https://github.com/Steve-Tech/CrOS_EC_Python"
Issues = "https://github.com/Steve-Tech/CrOS_EC_Python/issues"