[project]
name = "cros_ec_python"
version = "0.2.0"
authors = [
  { name="Steve-Tech" }
]
description = "A Python library for interacting with a Chrome OS EC."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries",
]
license = "GPL-2.0-or-later"

[project.optional-dependencies]
docs = ["pdoc", "portio"]
lpc = ["portio; sys_platform=='linux'", "wmi; sys_platform=='win32'"]

[project.urls]
Documentation = "https://steve-tech.github.io/CrOS_EC_Python/"
Repository = "https://github.com/Steve-Tech/CrOS_EC_Python"
Issues = "https://github.com/Steve-Tech/CrOS_EC_Python/issues"
